# niagara_vision_processing

./: README.md
pointscloud_clustering/: CMakeLists.txt  package.xml
pointscloud_clustering/launch/: obstaclesLidar.launch.py
pointscloud_clustering/src/: ObstaclesLidar.cpp
pointscloud_detector/: CMakeLists.txt  package.xml
pointscloud_detector/launch/: pcloudsDetec.launch.py
pointscloud_detector/src/: PointsDectector.cpp
pointscloud_detector/versions/: PointsDetectorV1.cpp  PointsDetectorV2.cpp  PointsDetectorV3.cpp  PointsDetectorV4_5.cpp  PointsDetectorV5.cpp  PointsDetectorV6.cpp  PointsDetectorV7.cpp  PointsDetectorV8.cpp
voxel_grid_filter/: CMakeLists.txt  package.xml
voxel_grid_filter/src/: VoxelGrid.cpp
yolov5_cpp/: CMakeLists.txt  package.xml
yolov5_cpp/launch/: yolov5cpp.launch.py
yolov5_cpp/src/: yolov5.cpp
yolov5_niagara/: CMakeLists.txt  package.xml
yolov5_niagara/launch/: yolov5.launch.py
yolov5_niagara/scripts/: ros_recognition_yolo.py
yolov8_cpp/: CMakeLists.txt  package.xml
yolov8_cpp/launch/: pytorch_To_onxx.py
yolov8_cpp/src/: yolov8.cpp
yolov8_niagara/: CMakeLists.txt  package.xml
yolov8_niagara/launch/: yolov8.launch.py
yolov8_niagara/scripts/: yolov8Niagara.py  yolov8NiagaraBetter.py
